--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,16 @@
+/* sizing, padding, and margin for the whole page */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* color for the entire page */
 body {
     background-color: #d9dcd6;
 }
 
+/* setting header padding, fonts, text color and the background color */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -15,15 +18,18 @@ body {
     color: #ffffff;
 }
 
+/* inline-block is used so that other elements can sit beside the header */
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
+/* changing color for the 'seo' in horiseon */
 .header h1 .seo {
     color: #d9dcd6;
 }
 
+/* puts elements in the header into their locations of the screen */
 .header div {
     padding-top: 15px;
     margin-right: 20px;
@@ -32,6 +38,7 @@ body {
     font-size: 20px;
 }
 
+/* removing the style off the unordered list */
 .header div ul {
     list-style-type: none;
 }
@@ -46,6 +53,7 @@ a {
     text-decoration: none;
 }
 
+/* adds hover effect to anchor elements */
 a:hover {
     color: black;
 }
@@ -54,6 +62,7 @@ p {
     font-size: 16px;
 }
 
+/* width and height for the big image on the page */
 .hero {
     height: 800px;
     width: 100%;
@@ -63,6 +72,7 @@ p {
     background-position: center;
 }
 
+/* helps position photos in the article sections of the page */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -79,6 +89,7 @@ p {
     margin-left: 20px;
 }
 
+/* giving box properties for the div element that acts as the background for the aside element*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -90,6 +101,7 @@ p {
     background-color: #2589bd;
 }
 
+/* helps space items in the aside element */
 .benefit-lead,
 .benefit-brand,
 .benefit-cost {
@@ -97,6 +109,7 @@ p {
     color: #ffffff;
 }
 
+/* heading alignment in the aside element */
 .benefit-lead h3,
 .benefit-brand h3,
 .benefit-cost h3 {
@@ -104,6 +117,7 @@ p {
     text-align: center;
 }
 
+/* proper image positioning in the aside element */
 .benefit-lead img,
 .benefit-brand img,
 .benefit-cost img {
@@ -112,6 +126,7 @@ p {
     max-width: 150px;
 }
 
+/* giving box properties to the div element that acts as a background for the article elements*/
 .search-engine-optimization,
 .online-reputation-management,
 .social-media-marketing {
@@ -123,12 +138,14 @@ p {
     color: #ffffff;
 }
 
+/* giving the article imgs a max height so they don't take up the whole page */
 .search-engine-optimization img,
 .online-reputation-management img,
 .social-media-marketing img{
     max-height: 200px;
 }
 
+/* gives each article element proper space on the page and appropriate font size */
 .search-engine-optimization h2,
 .online-reputation-management h2,
 .social-media-marketing h2 {
@@ -136,6 +153,7 @@ p {
     font-size: 36px;
 }
 
+/* enlarges the footer padding and sets the font and alignment */
 .footer {
     padding: 30px;
     clear: both;
@@ -143,6 +161,7 @@ p {
     text-align: center;
 }
 
+/* font size for final footer */
 .footer h4 {
     font-size: 20px;
 }
